--- a/src/main/resources/messages/messages-en_US.yml
+++ b/src/main/resources/messages/messages-en_US.yml
@@ -25,27 +25,21 @@ messages:
   moved-claim-block: '{prefix} &aSuccessfully moved the claim block.'
   move-claim-block-cooldown: '{prefix} &cMove the claim block again: you need to wait
     &6{hour} &chours, &6{minute} &cminutes and &6{second} &cseconds'
+  claim-create-cooldown: '{prefix} &cCreate claim again: you need to wait
+    &6{hour} &chours, &6{minute} &cminutes and &6{second} &cseconds'
   move-claim-block-error: '{prefix} &cTargeted chunk is not yours!'
   member-add-canceled: '{prefix} &cAdding member has been canceled!'
   player-is-not-online: '{prefix} &6{player} &cis not online!'
   claim-is-full: '{prefix} &cYou have reached the claim member limit! Limit: &4{max}'
+  claim-create-max: '{prefix} &cCan''t create Claim more than! Limit: &4{max}'
   member-already-in-claim: '{prefix} &4{target} &cis already in this claim!'
+  look-chunk-active: '{prefix} &e{seconds}-second &achunk looking activated.'
+  look-chunk-deactive: '{prefix} &aChunk looking deactivated.'
+  look-chunk-expired: '{prefix} &aChunk vision was deactivated as &e{seconds} &aseconds were up.'
   admin:
       player-bypass-mode-on: '{prefix} &aYou have successfully activated the admin bypass mode.'
       player-bypass-mode-off: '{prefix} &cYou have successfully deactivated the admin bypass mode.'
       player-bypass-mode: '{prefix} &7You can switch to admin mode with &f/xclaim bypass'
-      claim-deleted: '{prefix} &cYou have successfully deleted &4{player}''s &cclaim.'
-      claim-is-full: '{prefix} &4{player}''s &cclaim is full!'
-      player-has-not-claim: '{prefix} &4{player}''s &cclaim could not be found!'
-      claim-member-added: '{prefix} &aYou have successfully added &e{player} &ato &e{target}''s &aclaim.'
-      member-already-in-claim: '{prefix} &4{player} &cis already in &4{target}''s &cclaim!'
-      member-not-found-in-claim: '{prefix} &4{player} &cis not found in &4{target}''s &cclaim!'
-      claim-member-removed: '{prefix} &aYou have successfully removed &e{player} &afrom &e{target}''s &aclaim.'
-      invalid-number: '{prefix} &cInvalid Number: &4{number}! &cThe number must be higher than &40'
-      invalid-day: '{prefix} &cYou cannot remove more days from the claim days! Total Days: &4{total-day} &cday'
-      claim-set-day: '{prefix} &aSuccessfully changed &e{target}''s &aclaim day to &e{total-day}.'
-      claim-add-day: '{prefix} &aSuccessfully added &e{added-day} &aday to &e{target}''s &aclaim. Total Days: &e{total-day} &adays'
-      claim-remove-day: '{prefix} &aSuccessfully removed &e{removed-day} &aday from &e{target}''s &aclaim. Total Days: &e{total-day} &adays'
   join-alerts:
     title: '&6&lCLAIM'
     sub-title: '&fYou have entered &e{owner}''s &fclaim'
