--- a/src/main/resources/messages/messages-tr_TR.yml
+++ b/src/main/resources/messages/messages-tr_TR.yml
@@ -27,27 +27,21 @@ messages:
   moved-claim-block: '{prefix} &aBaşarıyla bölge bloğunu taşıdın.'
   move-claim-block-cooldown: '{prefix} &cBölge bloğunu tekrar taşımak için &6{hour}
     &csaat, &6{minute} &cdakika ve &6{second} &csaniye beklemelisin!'
+  claim-create-cooldown: '{prefix} &cTekrar bölge oluşturmak için &6{hour}
+    &csaat, &6{minute} &cdakika ve &6{second} &csaniye beklemelisin!'
   move-claim-block-error: '{prefix} &cHedef chunk sana ait değil!'
   member-add-canceled: '{prefix} &cÜye ekleme iptal edildi!'
   player-is-not-online: '{prefix} &6{player} &cçevrimiçi değil!'
   claim-is-full: '{prefix} &cBölge üye sınırı ulaştın! Sınır: &4{max}'
+  claim-create-max: '{prefix} &cDaha fazla bölge oluşturamazsın! Sınır: &4{max}'
   member-already-in-claim: '{prefix} &4{target} &czaten bu bölgenin üyesi!'
+  look-chunk-active: '{prefix} &e{seconds} &asaniyelik chunk görme aktif edildi!'
+  look-chunk-deactive: '{prefix} &aChunk görme deaktif edildi!'
+  look-chunk-expired: '{prefix} &e{seconds} &asaniye dolduğu için chunk görme deaktif edildi.'
   admin:
       player-bypass-mode-on: '{prefix} &aBaşarıyla admin baypas modunu etkinleştirdin.'
       player-bypass-mode-off: '{prefix} &cBaşarıyla admin baypas modunu etkisizleştirdin.'
       player-bypass-mode: '{prefix} &f/xclaim bypass &7komutu ile admin moduna geçiş yapabilirsin.'
-      player-has-not-claim: '{prefix} &4{player} &cadlı oyuncunun bölgesi bulunamadı!'
-      claim-deleted: '{prefix} &cBaşarıyla &4{player} &cadlı oyuncunun bölgesini sildin.'
-      claim-is-full: '{prefix} &4{player} &cadlı oyuncunun bölgesi dolu!'
-      claim-member-added: '{prefix} &aBaşarıyla &e{player} &aadlı oyuncuyu &e{target} &aadlı oyuncunun bölgesine ekledin.'
-      member-already-in-claim: '{prefix} &4{player} &czaten &4{target} &cadlı oyuncunun bölgesine üye!'
-      member-not-found-in-claim: '{prefix} &4{player} &cadlı oyuncu &4{target} &cadlı oyuncunun bölgesinde üye değil!'
-      claim-member-removed: '{prefix} &aBaşarıyla &e{player} &aadlı oyuncuyu &e{target} &aadlı oyuncunun bölgesinden çıkardın.'
-      invalid-number: '{prefix} &cGeçersiz Numara: &4{number}! &cNumara 0''dan yüksek olmalı!'
-      invalid-day: '{prefix} &cBölge süresinden daha fazla gün çıkaramazsın! Toplam Gün: &4{total-day} &cgün'
-      claim-set-day: '{prefix} &aBaşarıyla &e{target} &aadlı oyuncunun bölgesinin günü &e{total-day} &aolarak güncellendi.'
-      claim-add-day: '{prefix} &aBaşarıyla &e{target} &aadlı oyuncunun bölgesine &e{added-day} &agün eklendi. Toplam Gün: &e{total-day} &agün'
-      claim-remove-day: '{prefix} &aBaşarıyla &e{target} &aadlı oyuncunun bölgesinden &e{removed-day} &agün çıkartıldı. Toplam Gün: &e{total-day} &agün'
   join-alerts:
     title: '&6&lBÖLGE'
     sub-title: '&e{owner} &fadlı oyuncunun bölgesine giriş yaptın!'
