--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>github.mertout</groupId>
     <artifactId>XClaim</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.5.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>XClaim</name>
@@ -41,11 +41,11 @@
                             <relocations>
                                 <relocation>
                                     <pattern>org.bstats</pattern>
-                                    <shadedPattern>io.github.mertout.Claim</shadedPattern>
+                                    <shadedPattern>io.github.mertout.bstats</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>de.tr7zw.changeme.nbtapi</pattern>
-                                    <shadedPattern>io.github.mertout.Claim</shadedPattern>
+                                    <shadedPattern>io.github.mertout.nbtapi</shadedPattern>
                                 </relocation>
                             </relocations>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>com.github.decentsoftware-eu</groupId>
             <artifactId>decentholograms</artifactId>
-            <version>2.5.2</version>
+            <version>2.8.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -108,12 +108,6 @@
             <groupId>com.github.MilkBowl</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
-            <artifactId>holographicdisplays-api</artifactId>
-            <version>2.4.9</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
