--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>github.mertout</groupId>
     <artifactId>XClaim</artifactId>
     <version>1.5.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>XClaim</name>
-
+    <packaging>pom</packaging>
+    <inceptionYear>2022 </inceptionYear>
+    <organization>
+        <name>mert_out</name>
+        <url>https://github.com/mertout/</url>
+    </organization>
     <properties>
         <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <build>
         <plugins>
             <plugin>
